--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <div class="container-fluid">
 
-    <header>
-        <a href="#">
-            <img src="css/images/shr.PNG">
+    <header class="logo">
+        <a class="" href="#">
+            <img class="justify-content-center" src="css/images/shr.PNG">
         </a>
     </header>
 
@@ -30,6 +30,13 @@
                 </li>
             </ul>
     </nav>
+
+    <div id="buttonContainer" class="d-flex flex-column bd-highlight mb-3">
+        <button type="button" class="btn btn-dark p-2 bd-highlight">Moms</button>
+        <button type="button" class="btn btn-dark p-2 bd-highlight">Nigger</button>
+        <button type="button" class="btn btn-dark p-2 bd-highlight">Nigger2</button>
+    </div>
+
 
 
 
