Opdatering til nav og forside

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </a>
     </header>
 
-    <nav class="navbar navbar-expand navbar-light justify-content-center">
-            <ul class="navbar-nav">
+    <nav id="navbar" class="d-flex justify-content-around navbar-light flex-row">
+            <ul class="d-flex navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Forside</a>
                 </li>
@@ -30,11 +30,16 @@
                 </li>
             </ul>
     </nav>
+    
+    <div class="headerimg">
+        <img src="css/images/Headerimg.PNG">
+    </div>
 
-    <div id="buttonContainer" class="d-flex flex-column bd-highlight mb-3">
-        <button type="button" class="btn btn-dark p-2 bd-highlight">Moms</button>
-        <button type="button" class="btn btn-dark p-2 bd-highlight">Nigger</button>
-        <button type="button" class="btn btn-dark p-2 bd-highlight">Nigger2</button>
+    <div id="buttonContainer" class="row">
+        <button type="button" class="btn p-2 col-md-6">Moms</button>
+        <button type="button" class="btn p-2 col-md-6">Nigger</button>
+        <button type="button" class="btn p-2 col-md-6">Nigger2</button>
+        <button type="button" class="btn p-2 col-md-6">Nigger2</button>
     </div>
 
     <div id="cards" class="row">
