--- a/index.html
+++ b/index.html
@@ -17,18 +17,10 @@
         </a>
     </header>
 
-    <nav id="navbar" class="d-flex justify-content-around navbar-light flex-row">
-            <ul class="d-flex navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Forside</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Information</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Kontakt</a>
-                </li>
-            </ul>
+    <nav id="" class="navbar-light d-flex justify-content-around">
+           <a href="#">Forside</a>
+           <a href="#">Info</a>
+           <a href="#">Kontakt</a>
     </nav>
     
     <div class="headerimg">
