--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
     </header>
 
-    <nav id="" class="navbar-light d-flex justify-content-around">
+    <nav id="navbar" class="navbar-light d-flex justify-content-around">
            <a href="#">Forside</a>
            <a href="#">Info</a>
            <a href="#">Kontakt</a>
