--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -32,7 +32,7 @@
     </h5>
 
 
-    <div class="">
+    <div id="kontaktContainer">
         <img id="kontaktIMG" src="../css/images/Susanne.png">
 
 
