ansøgnings formular added

--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -47,12 +47,12 @@
         <a href="mailto:"><i class="fas fa-phone-square"></i></a>
         <a href="tel:"><i class="fas fa-envelope-square"></i></a>
     </div>
-
+    <div class="dropdown-divider"></div>
 
     <!-- person 2 -->
 
 
-    <div id="kontaktContainer" class="mt-5">
+    <div id="kontaktContainer">
         <img id="kontaktIMG" src="../css/images/Kristina.png">
     </div>
     <div id="textHandler" class="mt-3">
@@ -64,12 +64,12 @@
         <a href="mailto:"><i class="fas fa-phone-square"></i></a>
         <a href="tel:"><i class="fas fa-envelope-square"></i></a>
     </div>
-
+    <div class="dropdown-divider"></div>
 
 <!-- Person 3 -->
 
 
-    <div id="kontaktContainer" class="mt-5">
+    <div id="kontaktContainer">
         <img id="kontaktIMG" src="../css/images/Susanne.png">
     </div>
     <div id="textHandler" class="mt-3">
@@ -80,6 +80,19 @@
     <div id="icons">
         <a href="mailto:"><i class="fas fa-phone-square"></i></a>
         <a href="tel:"><i class="fas fa-envelope-square"></i></a>
+    </div>
+    <div class="dropdown-divider"></div>
+
+    <div id="ansøgning">
+        <h5 class="text-center">
+            <a>Uopfordret ansøgning</a>
+        </h5>
+    </div>
+
+    <div id="ansøgning">
+        <h5 class="text-center">
+            <a>Ledige stillinger</a>
+        </h5>
     </div>
 
 
