Header fuld done

--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 
 <div class="container-fluid">
 
-    <header class="logo">
+    <div id="headerWrap" class="d-flex">
+        <header class="logo ">
         <a class="" href="index.html">
             <img class="justify-content-center" src="css/images/shr.PNG">
         </a>
-    </header>
+        </header>
 
-    <nav id="" class="navbar-light d-flex justify-content-around">
-           <a href="#">Forside</a>
-           <a href="#">Info</a>
-           <a href="#">Kontakt</a>
-    </nav>
+        <nav id="" class="navbar-light d-flex justify-content-around">
+            <a href="#">Forside</a>
+            <a href="#">Kontakt</a>
+            <a href="#">Information</a>
+        </nav>
+    </div>
+
     
     <div class="headerimg">
         <img src="css/images/Headerimg.PNG">
