--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -28,73 +28,75 @@
         <img src="../css/images/Headerimg.PNG">
     </div>
 
-    <h5 class="d-flex justify-content-center mt-3">
+    <h5 class="d-flex justify-content-center mt-3" id="headerText">
         Hvem er vi?
     </h5>
 
+<div id="kontaktWrapper">
     <!-- person 1 -->
-
-
-    <div id="kontaktContainer">
-        <img id="kontaktIMG" src="../css/images/Susanne.png">
+    <div>
+        <div id="kontaktContainer">
+            <img id="kontaktIMG" src="../css/images/Susanne.png">
+        </div>
+        <div id="textHandler" class="mt-3">
+            <p id="kontakt" class="col-8">
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            </p>
+        </div>
+        <div id="icons">
+            <a href="mailto:"><i class="fas fa-phone-square"></i></a>
+            <a href="tel:"><i class="fas fa-envelope-square"></i></a>
+        </div>
+        <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
-    <div id="textHandler" class="mt-3">
-        <p id="kontakt" class="col-8">
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        </p>
-    </div>
-    <div id="icons">
-        <a href="mailto:"><i class="fas fa-phone-square"></i></a>
-        <a href="tel:"><i class="fas fa-envelope-square"></i></a>
-    </div>
-    <div class="dropdown-divider"></div>
+        <!-- person 2 -->
 
-    <!-- person 2 -->
-
-
-    <div id="kontaktContainer">
-        <img id="kontaktIMG" src="../css/images/Kristina.png">
+    <div>
+        <div id="kontaktContainer">
+            <img id="kontaktIMG" src="../css/images/Kristina.png">
+        </div>
+        <div id="textHandler" class="mt-3">
+            <p id="kontakt" class="col-8">
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            </p>
+        </div>
+        <div id="icons">
+            <a href="mailto:"><i class="fas fa-phone-square"></i></a>
+            <a href="tel:"><i class="fas fa-envelope-square"></i></a>
+        </div>
+        <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
-    <div id="textHandler" class="mt-3">
-        <p id="kontakt" class="col-8">
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        </p>
-    </div>
-    <div id="icons">
-        <a href="mailto:"><i class="fas fa-phone-square"></i></a>
-        <a href="tel:"><i class="fas fa-envelope-square"></i></a>
-    </div>
-    <div class="dropdown-divider"></div>
-
 <!-- Person 3 -->
 
+    <div>
+        <div id="kontaktContainer">
+            <img id="kontaktIMG" src="../css/images/Susanne.png">
+        </div>
+        <div id="textHandler" class="mt-3">
+            <p id="kontakt" class="col-8">
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            </p>
+        </div>
+        <div id="icons">
+            <a href="mailto:"><i class="fas fa-phone-square"></i></a>
+            <a href="tel:"><i class="fas fa-envelope-square"></i></a>
+        </div>
+        <div id="mobileBreaker" class="dropdown-divider"></div>
+    </div>
+</div>
 
-    <div id="kontaktContainer">
-        <img id="kontaktIMG" src="../css/images/Susanne.png">
-    </div>
-    <div id="textHandler" class="mt-3">
-        <p id="kontakt" class="col-8">
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        </p>
-    </div>
-    <div id="icons">
-        <a href="mailto:"><i class="fas fa-phone-square"></i></a>
-        <a href="tel:"><i class="fas fa-envelope-square"></i></a>
-    </div>
-    <div class="dropdown-divider"></div>
-
-    <div id="ansøgning">
+    <div id="ansøgningWrapper">
+        <div id="ansøgning">
         <h5 class="text-center">
             <a>Uopfordret ansøgning</a>
         </h5>
     </div>
-
-    <div id="ansøgning">
+        <div id="ansøgning">
         <h5 class="text-center">
             <a>Ledige stillinger</a>
         </h5>
     </div>
-
+    </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
