--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     </div>
 
     <div id="buttonContainer" class="row">
-        <button type="button" class="btn p-2 col-md-6">Moms</button>
-        <button type="button" class="btn p-2 col-md-6">Nigger</button>
-        <button type="button" class="btn p-2 col-md-6">Nigger2</button>
-        <button type="button" class="btn p-2 col-md-6">Nigger2</button>
+        <button type="button" class="btn  col-md-6">Bogføring</button>
+        <button type="button" class="btn col-md-6">Lønadmin</button>
+        <button type="button" class="btn col-md-6">Årsafslutning</button>
+        <button type="button" class="btn col-md-6">Andre områder</button>
     </div>
 
     <div id="cards" class="row">
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-4">
                     <img src="css/images/blackman.jpg" class="card-img" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-8">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -53,10 +53,10 @@
         </div>
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-4">
                     <img src="css/images/blackman.jpg" class="card-img" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-8">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -66,10 +66,10 @@
         </div>
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-4">
                     <img src="css/images/blackman.jpg" class="card-img" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-8">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -79,10 +79,10 @@
         </div>
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-4">
                     <img src="css/images/blackman.jpg" class="card-img" alt="...">
                 </div>
-                <div class="col-md-8">
+                <div class="col-8">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
