infoside lavet responsiv

--- a/infomation/infomation.html
+++ b/infomation/infomation.html
@@ -9,81 +9,119 @@
 <body>
 
     <div class="container-fluid">
-        <div class="container-fluid">
 
-            <div id="headerWrap" class="d-flex">
-                <header class="logo ">
-                    <a class="" href="../index.html">
-                        <img class="justify-content-center" src="../css/images/shr.PNG">
-                    </a>
-                </header>
+        <div id="headerWrap" class="d-flex">
+            <header class="logo ">
+                <a class="" href="../index.html">
+                    <img class="justify-content-center" src="../css/images/shr.PNG">
+                </a>
+            </header>
 
-                <nav id="" class="navbar-light d-flex justify-content-around">
-                    <a href="#">Forside</a>
-                    <a href="#">Kontakt</a>
-                    <a href="#">Information</a>
-                </nav>
-            </div>
+            <nav id="" class="navbar-light d-flex justify-content-around">
+                <a href="#">Forside</a>
+                <a href="#">Kontakt</a>
+                <a href="#">Information</a>
+            </nav>
+        </div>
 
-            <div class="headerimg">
-                <img src="../css/images/Headerimg.PNG">
-            </div>
+        <div class="headerimg">
+            <img src="../css/images/Headerimg.PNG">
+        </div>
 
-            <div class="card text-center m-4">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="row">
+
+            <div class=" col-12 col-md-4 offset-md-2 col-lg-2 offset-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card text-center m-4">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class=" col-12 col-md-4 col-lg-2">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card text-center m-4">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class=" col-12 offset-md-2 col-md-4 col-lg-2 offset-lg-0">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card text-center m-4">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class=" col-12 col-md-4 col-lg-2 offset-lg-3">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card text-center m-4 p-3" id="tilbud">
-                <div class="card-body">
-                    <h5 class="card-title text-light">Card title</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class=" col-12 col-md-4 offset-md-2 col-lg-2 offset-lg-0">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card text-center m-4 p-3" id="tilbud">
-                <div class="card-body">
-                    <h5 class="card-title text-light">Card title</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class=" col-12 col-md-4 col-lg-2">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+
+        <div class="row">
+            <div class="offset-md-3 col-md-6 col-lg-4 offset-lg-0">
+                <div class="card m-3 text-center" id="tilbud">
+                    <div class="card-body">
+                        <h5 class="card-title text-light">Card title</h5>
+                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="card text-center m-4 p-3" id="tilbud">
-                <div class="card-body">
-                    <h5 class="card-title text-light">Card title</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="offset-md-2 col-md-4 col-lg-4 offset-lg-0">
+                <div class="card m-3 text-center" id="tilbud">
+                    <div class="card-body">
+                        <h5 class="card-title text-light">Card title</h5>
+                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
                 </div>
             </div>
+
+            <div class="col-md-4 col-lg-4">
+                <div class="card m-3 text-center" id="tilbud">
+                    <div class="card-body">
+                        <h5 class="card-title text-light">Card title</h5>
+                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
