changed id's back :))

--- a/infomation/infomation.html
+++ b/infomation/infomation.html
@@ -13,7 +13,7 @@
         <div id="headerWrap" class="d-flex">
             <header class="logo ">
                 <a class="" href="../index.html">
-                    <img class="justify-content-center" src="../css/images/shr.PNG" alt="">
+                    <img class="justify-content-center" src="../css/images/shr.PNG">
                 </a>
             </header>
 
@@ -25,7 +25,7 @@
         </div>
 
         <div class="headerimg">
-            <img src="../css/images/Headerimg.PNG" alt="">
+            <img src="../css/images/Headerimg.PNG">
         </div>
 
         <div class="row">
@@ -93,7 +93,7 @@
 
         <div class="row">
             <div class="offset-md-3 col-md-6 col-lg-4 offset-lg-0">
-                <div class="card m-3 text-center tilbud">
+                <div class="card m-3 text-center" id="tilbud">
                     <div class="card-body">
                         <h5 class="card-title text-light">Card title</h5>
                         <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -103,7 +103,7 @@
             </div>
 
             <div class="offset-md-2 col-md-4 col-lg-4 offset-lg-0">
-                <div class="card m-3 text-center tilbud">
+                <div class="card m-3 text-center" id="tilbud">
                     <div class="card-body">
                         <h5 class="card-title text-light">Card title</h5>
                         <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -113,7 +113,7 @@
             </div>
 
             <div class="col-md-4 col-lg-4">
-                <div class="card m-3 text-center tilbud">
+                <div class="card m-3 text-center" id="tilbud">
                     <div class="card-body">
                         <h5 class="card-title text-light">Card title</h5>
                         <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
