coherently functional html's

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <div id="headerWrap" class="d-flex">
         <header class="logo ">
         <a class="" href="index.html">
-            <img class="justify-content-center" src="css/images/shr.PNG">
+            <img class="justify-content-center" src="css/images/shr.PNG" alt="SH Regnskab logo">
         </a>
         </header>
 
         <nav id="" class="navbar-light d-flex justify-content-around">
             <a id="active" href="#">Forside</a>
-            <a href="#">Kontakt</a>
-            <a href="#">Information</a>
+            <a href="kontakt.html">Kontakt</a>
+            <a href="information.html">Information</a>
         </nav>
     </div>
 
     <hr>
     <div class="headerimg">
-        <img src="css/images/Headerimg.PNG">
+        <img src="css/images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
     </div>
 
     <div class="overskrifter text-center m-5 ">
