--- a/information.html
+++ b/information.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Infomation</title>
+    <title>SH Regnskab | Information</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -12,20 +12,21 @@
 
         <div id="headerWrap" class="d-flex">
             <header class="logo ">
-                <a class="" href="../index.html">
-                    <img class="justify-content-center" src="../css/images/shr.PNG" alt="">
+                <a class="" href="index.html">
+                    <img class="justify-content-center" src="css/images/shr.PNG" alt="SH Regnskab logo">
                 </a>
             </header>
 
             <nav id="" class="navbar-light d-flex justify-content-around">
-                <a href="#">Forside</a>
-                <a href="#">Kontakt</a>
-                <a href="#">Information</a>
+                <a href="index.html">Forside</a>
+                <a href="kontakt.html">Kontakt</a>
+                <a id="active" href="#">Information</a>
             </nav>
         </div>
 
+        <hr>
         <div class="headerimg">
-            <img src="../css/images/Headerimg.PNG" alt="">
+            <img src="css/images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
         </div>
 
         <div class="row">
