--- a/kontakt.html
+++ b/kontakt.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <title>Kontakt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
 
 <div class="container-fluid">
 
-    <header class="logo">
-        <a class="" href="../index.html">
-            <img class="justify-content-center" src="../css/images/shr.PNG">
-        </a>
-    </header>
+    <div id="headerWrap" class="d-flex">
+        <header class="logo ">
+            <a class="" href="index.html">
+                <img class="justify-content-center" src="css/images/shr.PNG" alt="SH Regnskab logo">
+            </a>
+        </header>
 
-    <nav id="navbar" class="navbar-light d-flex justify-content-around">
-        <a href="#">Forside</a>
-        <a href="#">Info</a>
-        <a href="#">Kontakt</a>
-    </nav>
+        <nav id="" class="navbar-light d-flex justify-content-around">
+            <a href="index.html">Forside</a>
+            <a id="active" href="#">Kontakt</a>
+            <a href="information.html">Information</a>
+        </nav>
+    </div>
+
+    <hr>
     <div class="headerimg">
-        <img src="../css/images/Headerimg.PNG">
+        <img src="css/images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
     </div>
 
     <h5 class="d-flex justify-content-center mt-3" id="headerText">
@@ -36,7 +40,7 @@
     <!-- person 1 -->
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="../css/images/Susanne.png">
+            <img id="kontaktIMG" src="css/images/Susanne.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
@@ -53,7 +57,7 @@
 
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="../css/images/Kristina.png">
+            <img id="kontaktIMG" src="css/images/Kristina.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
@@ -70,7 +74,7 @@
 
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="../css/images/Susanne.png">
+            <img id="kontaktIMG" src="css/images/Susanne.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
@@ -100,6 +104,6 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
