--- a/information.html
+++ b/information.html
@@ -13,7 +13,7 @@
         <div id="headerWrap" class="d-flex">
             <header class="logo ">
                 <a class="" href="index.html">
-                    <img class="justify-content-center" src="css/images/shr.PNG" alt="SH Regnskab logo">
+                    <img class="justify-content-center" src="images/shr.PNG" alt="SH Regnskab logo">
                 </a>
             </header>
 
@@ -26,7 +26,7 @@
 
         <hr>
         <div class="headerimg">
-            <img src="css/images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
+            <img src="images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
         </div>
 
         <div class="row">
