--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
     <div id="headerWrap" class="d-flex">
         <header class="logo ">
             <a class="" href="index.html">
-                <img class="justify-content-center" src="css/images/shr.PNG" alt="SH Regnskab logo">
+                <img class="justify-content-center" src="images/shr.PNG" alt="SH Regnskab logo">
             </a>
         </header>
 
@@ -29,7 +29,7 @@
 
     <hr>
     <div class="headerimg">
-        <img src="css/images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
+        <img src="images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
     </div>
 
     <h5 class="d-flex justify-content-center mt-3" id="headerText">
@@ -40,7 +40,7 @@
     <!-- person 1 -->
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="css/images/Susanne.png">
+            <img id="kontaktIMG" src="images/Susanne.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
@@ -57,7 +57,7 @@
 
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="css/images/Kristina.png">
+            <img id="kontaktIMG" src="images/Kristina.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
@@ -74,7 +74,7 @@
 
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="css/images/Susanne.png">
+            <img id="kontaktIMG" src="images/Susanne.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
