--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="headerWrap" class="d-flex">
         <header class="logo ">
         <a class="" href="index.html">
-            <img class="justify-content-center" src="css/images/shr.PNG" alt="SH Regnskab logo">
+            <img class="justify-content-center" src="images/shr.PNG" alt="SH Regnskab logo">
         </a>
         </header>
 
@@ -26,7 +26,7 @@
 
     <hr>
     <div class="headerimg">
-        <img src="css/images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
+        <img src="images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
     </div>
 
     <div class="overskrifter text-center m-5 ">
@@ -58,7 +58,7 @@
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-4">
-                    <img src="css/images/bubble.PNG" class="card-img" alt="...">
+                    <img src="images/bubble.PNG" class="card-img" alt="...">
                 </div>
                 <div class="col-8">
                     <div class="card-body">
@@ -71,7 +71,7 @@
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-4">
-                    <img src="css/images/bubble.PNG" class="card-img" alt="...">
+                    <img src="images/bubble.PNG" class="card-img" alt="...">
                 </div>
                 <div class="col-8">
                     <div class="card-body">
@@ -84,7 +84,7 @@
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-4">
-                    <img src="css/images/bubble.PNG" class="card-img" alt="...">
+                    <img src="images/bubble.PNG" class="card-img" alt="...">
                 </div>
                 <div class="col-8">
                     <div class="card-body">
@@ -97,7 +97,7 @@
         <div class="card mb-3 col-md-6" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-4">
-                    <img src="css/images/bubble.PNG" class="card-img" alt="...">
+                    <img src="images/bubble.PNG" class="card-img" alt="...">
                 </div>
                 <div class="col-8">
                     <div class="card-body">
