footer re-added everywhere

--- a/kontakt.html
+++ b/kontakt.html
@@ -48,8 +48,8 @@
             </p>
         </div>
         <div id="icons">
-            <a href="mailto:"><i class="fas fa-phone-square"></i></a>
-            <a href="tel:"><i class="fas fa-envelope-square"></i></a>
+            <a href="mailto:TODO"><i class="fas fa-phone-square"></i></a>
+            <a href="tel:TODO"><i class="fas fa-envelope-square"></i></a>
         </div>
         <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
@@ -65,8 +65,8 @@
             </p>
         </div>
         <div id="icons">
-            <a href="mailto:"><i class="fas fa-phone-square"></i></a>
-            <a href="tel:"><i class="fas fa-envelope-square"></i></a>
+            <a href="mailto:TODO"><i class="fas fa-phone-square"></i></a>
+            <a href="tel:TODO"><i class="fas fa-envelope-square"></i></a>
         </div>
         <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
@@ -82,8 +82,8 @@
             </p>
         </div>
         <div id="icons">
-            <a href="mailto:"><i class="fas fa-phone-square"></i></a>
-            <a href="tel:"><i class="fas fa-envelope-square"></i></a>
+            <a href="mailto:TODO"><i class="fas fa-phone-square"></i></a>
+            <a href="tel:TODO"><i class="fas fa-envelope-square"></i></a>
         </div>
         <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
@@ -92,15 +92,32 @@
     <div id="ansøgningWrapper">
         <div id="ansøgning">
         <h5 class="text-center">
-            <a>Uopfordret ansøgning</a>
+            <a href="mailto:TODO">Uopfordret ansøgning</a>
         </h5>
     </div>
         <div id="ansøgning">
         <h5 class="text-center">
-            <a>Ledige stillinger</a>
+            <a href="TODO">Ledige stillinger</a>
         </h5>
     </div>
     </div>
+    <footer class="footer bg-dark d-flex flex-wrap row justify-content-center align-middle mt-2 pb-2 pt-3">
+        <section class="footer__some flex-nowrap row mx-5">
+            <a href="https://facebook.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-facebook-square" aria-label="Facebook icon"></i></a>
+            <a href="https://linkedin.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-linkedin" aria-label="LinkedIn icon"></i></a>
+        </section>
+        <section class="footer__address row">
+            <a href="index.html" target="_blank" class="footer__address__company mx-1"><p class="font-weight-bold">SH Regnskab</p></a>
+            <a href="https://g.page/onlinesolutiongroup?share" target="_blank" class="footer__address__map mx-1"><p>Slotsbryggen 14 A-D</p></a>
+            <a href="https://g.page/onlinesolutiongroup?share" target="_blank" class="footer__address__map--nf mx-1"><p>4800 Nykøbing Falster</p></a>
+        </section>
+        <section class="footer__contact row">
+            <a href="tel:+4524276043" target="_blank" class="footer__contact__phone mx-1"><p>24 27 60 43</p></a>
+            <a href="mailto:mail@sh-regnskab.dk" target="_blank" class="footer__contact__mail mx-1"><p>mail@sh-regnskab.dk</p></a>
+            <a href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=13162131&soeg=13162131&language=da" target="_blank" class="footer__contact__cvr mx-1"><p>CVR: 13162131</p></a>
+            <a href="TODO" target="_blank" class="footer__contact__cookies mx-1"><p>Cookie-politik</p></a>
+        </section>
+    </footer>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
