--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>SH Regnskab | Forside</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -108,7 +109,23 @@
             </div>
         </div>
     </div>
-
+    <footer class="footer bg-dark d-flex flex-wrap row justify-content-center align-middle mt-2 pb-2 pt-3">
+        <section class="footer__some flex-nowrap row mx-5">
+            <a href="https://facebook.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-facebook-square" aria-label="Facebook icon"></i></a>
+            <a href="https://linkedin.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-linkedin" aria-label="LinkedIn icon"></i></a>
+        </section>
+        <section class="footer__address row">
+            <a href="index.html" target="_blank" class="footer__address__company mx-1"><p class="font-weight-bold">SH Regnskab</p></a>
+            <a href="https://g.page/onlinesolutiongroup?share" target="_blank" class="footer__address__map mx-1"><p>Slotsbryggen 14 A-D</p></a>
+            <a href="https://g.page/onlinesolutiongroup?share" target="_blank" class="footer__address__map--nf mx-1"><p>4800 Nykøbing Falster</p></a>
+        </section>
+        <section class="footer__contact row">
+            <a href="tel:+4524276043" target="_blank" class="footer__contact__phone mx-1"><p>24 27 60 43</p></a>
+            <a href="mailto:mail@sh-regnskab.dk" target="_blank" class="footer__contact__mail mx-1"><p>mail@sh-regnskab.dk</p></a>
+            <a href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=13162131&soeg=13162131&language=da" target="_blank" class="footer__contact__cvr mx-1"><p>CVR: 13162131</p></a>
+            <a href="TODO" target="_blank" class="footer__contact__cookies mx-1"><p>Cookie-politik</p></a>
+        </section>
+    </footer>
 
 
 
