fixed order of contact icons, changed footer padding - need meta data, fresh pics, contact info, and text - maybe spam filter for mail if not too back-end-y

--- a/kontakt.html
+++ b/kontakt.html
@@ -48,8 +48,8 @@
             </p>
         </div>
         <div id="icons">
-            <a href="mailto:TODO"><i class="fas fa-phone-square"></i></a>
-            <a href="tel:TODO"><i class="fas fa-envelope-square"></i></a>
+            <a href="tel:TODO"><i class="fas fa-phone-square"></i></a>
+            <a href="mailto:TODO"><i class="fas fa-envelope-square"></i></a>
         </div>
         <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
@@ -65,8 +65,8 @@
             </p>
         </div>
         <div id="icons">
-            <a href="mailto:TODO"><i class="fas fa-phone-square"></i></a>
-            <a href="tel:TODO"><i class="fas fa-envelope-square"></i></a>
+            <a href="tel:TODO"><i class="fas fa-phone-square"></i></a>
+            <a href="mailto:TODO"><i class="fas fa-envelope-square"></i></a>
         </div>
         <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
@@ -82,8 +82,8 @@
             </p>
         </div>
         <div id="icons">
-            <a href="mailto:TODO"><i class="fas fa-phone-square"></i></a>
-            <a href="tel:TODO"><i class="fas fa-envelope-square"></i></a>
+            <a href="tel:TODO"><i class="fas fa-phone-square"></i></a>
+            <a href="mailto:TODO"><i class="fas fa-envelope-square"></i></a>
         </div>
         <div id="mobileBreaker" class="dropdown-divider"></div>
     </div>
@@ -101,7 +101,7 @@
         </h5>
     </div>
     </div>
-    <footer class="footer bg-dark d-flex flex-wrap row justify-content-center align-middle mt-2 pb-2 pt-3">
+    <footer class="footer bg-dark d-flex flex-wrap row justify-content-center align-middle mt-2 pb-3 pt-4">
         <section class="footer__some flex-nowrap row mx-5">
             <a href="https://facebook.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-facebook-square" aria-label="Facebook icon"></i></a>
             <a href="https://linkedin.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-linkedin" aria-label="LinkedIn icon"></i></a>
